brain/sources/prod-metadata/objects/Section_Evaluation__c/Section_Evaluation__c.object-meta.xml
<CustomObject>
    <label>Section Evaluation</label>
    <nameField>
        <displayFormat>ES-{0000}</displayFormat>
        <label>Section Evaluation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Section Evaluations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>