brain/sources/prod-metadata/objects/Section_Evaluation__c/fields/Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Evaluation__c</fullName>
    <label>Evaluation</label>
    <referenceTo>Interview_Evaluation__c</referenceTo>
    <relationshipLabel>Section Evaluations</relationshipLabel>
    <relationshipName>Section_Evaluations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>