brain/sources/prod-metadata/objects/Section_Evaluation__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Score</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>