brain/sources/prod-metadata/objects/Section_Evaluation__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Section</label>
    <referenceTo>Section__c</referenceTo>
    <relationshipLabel>Section Evaluations</relationshipLabel>
    <relationshipName>Section_Evaluations</relationshipName>
    <type>Lookup</type>
</CustomField>